// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectedAllergyItem Snapshot Tests default rendering matches snapshot 1`] = `
<div>
  <div
    class="cds--css-grid"
    data-testid="selected-allergy-item-grid-test-allergy-1"
  >
    <div
      class="selectedAllergyTitle cds--sm:col-span-4 cds--md:col-span-5 cds--lg:col-span-8 cds--xlg:col-span-8 cds--css-grid-column"
    >
      <span
        data-testid="allergy-display-name-test-allergy-1"
      >
        Peanut Allergy
         [
        Food
        ]
      </span>
      <a
        class="cds--link"
        data-testid="allergy-add-note-link-test-allergy-1"
        href="#"
      >
        Add Note
      </a>
    </div>
    <div
      class="selectedAllergySeverity cds--sm:col-span-4 cds--md:col-span-3 cds--lg:col-span-3 cds--xlg:col-span-3 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
        data-testid="allergy-severity-dropdown-test-allergy-1"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_6c_-toggle-button"
          id="downshift-_r_6c_-label"
        >
          Select Severity
        </label>
        <div
          class="cds--dropdown cds--autoalign cds--list-box"
          id="allergy-severity-dropdown-test-allergy-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_6c_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Select severity for this allergy"
            class="cds--list-box__field"
            id="downshift-_r_6c_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Mild"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Mild
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_6c_-label"
            class="cds--list-box__menu"
            id="downshift-_r_6c_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
    <div
      class="selectedAllergyReactions cds--sm:col-span-4 cds--md:col-span-4 cds--lg:col-span-4 cds--xlg:col-span-4 cds--css-grid-column"
    >
      <div
        class="cds--multi-select__wrapper cds--multi-select--filterable__wrapper cds--list-box__wrapper cds--autoalign"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="allergy-reactions-multiselect-test-allergy-1-input"
          id="allergy-reactions-multiselect-test-allergy-1-label"
        >
          Select Reactions
          <span
            class="cds--visually-hidden"
          >
            Total items selected:  1. To clear selection, press Delete or Backspace.
          </span>
        </label>
        <div
          class="cds--multi-select cds--combo-box cds--multi-select--filterable cds--multi-select--selected cds--list-box"
          id="allergy-reactions-multiselect-test-allergy-1"
        >
          <div
            class="cds--list-box__field"
          >
            <div
              class="cds--tag cds--tag--filter cds--tag--high-contrast"
            >
              <span
                class="cds--tag__label"
                title="1"
              >
                1
              </span>
              <button
                aria-label="Clear all selected items"
                class="cds--tag__close-icon"
                tabindex="-1"
                title="Clear all selected items"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                  />
                </svg>
              </button>
            </div>
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="listbox"
              autocomplete="off"
              class="cds--text-input cds--text-input--empty"
              id="allergy-reactions-multiselect-test-allergy-1-input"
              placeholder="Select Reactions"
              role="combobox"
              value=""
            />
            <button
              aria-controls="allergy-reactions-multiselect-test-allergy-1__menu"
              aria-expanded="false"
              aria-label="Open"
              class="cds--list-box__menu-icon"
              id="allergy-reactions-multiselect-test-allergy-1-toggle-button"
              tabindex="-1"
              title="Open"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
            </button>
          </div>
          <ul
            aria-labelledby="allergy-reactions-multiselect-test-allergy-1-label"
            class="cds--list-box__menu"
            id="allergy-reactions-multiselect-test-allergy-1__menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectedAllergyItem Snapshot Tests rendering with validation errors matches snapshot 1`] = `
<div>
  <div
    class="cds--css-grid"
    data-testid="selected-allergy-item-grid-test-allergy-1"
  >
    <div
      class="selectedAllergyTitle cds--sm:col-span-4 cds--md:col-span-5 cds--lg:col-span-8 cds--xlg:col-span-8 cds--css-grid-column"
    >
      <span
        data-testid="allergy-display-name-test-allergy-1"
      >
        Peanut Allergy
         [
        Food
        ]
      </span>
      <a
        class="cds--link"
        data-testid="allergy-add-note-link-test-allergy-1"
        href="#"
      >
        Add Note
      </a>
    </div>
    <div
      class="selectedAllergySeverity cds--sm:col-span-4 cds--md:col-span-3 cds--lg:col-span-3 cds--xlg:col-span-3 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
        data-testid="allergy-severity-dropdown-test-allergy-1"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_6i_-toggle-button"
          id="downshift-_r_6i_-label"
        >
          Select Severity
        </label>
        <div
          class="cds--dropdown cds--dropdown--invalid cds--autoalign cds--list-box cds--list-box--invalid"
          data-invalid="true"
          id="allergy-severity-dropdown-test-allergy-1"
        >
          <svg
            aria-hidden="true"
            class="cds--list-box__invalid-icon"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8,1C4.2,1,1,4.2,1,8s3.2,7,7,7s7-3.1,7-7S11.9,1,8,1z M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2 c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
            />
            <path
              d="M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8 c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
              data-icon-path="inner-path"
              opacity="0"
            />
          </svg>
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_6i_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Select severity for this allergy"
            class="cds--list-box__field"
            id="downshift-_r_6i_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Select Severity"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Select Severity
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_6i_-label"
            class="cds--list-box__menu"
            id="downshift-_r_6i_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
        <div
          class="cds--form-requirement"
        >
          Please select a value
        </div>
      </div>
    </div>
    <div
      class="selectedAllergyReactions cds--sm:col-span-4 cds--md:col-span-4 cds--lg:col-span-4 cds--xlg:col-span-4 cds--css-grid-column"
    >
      <div
        class="cds--multi-select__wrapper cds--multi-select--filterable__wrapper cds--list-box__wrapper cds--autoalign"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="allergy-reactions-multiselect-test-allergy-1-input"
          id="allergy-reactions-multiselect-test-allergy-1-label"
        >
          Select Reactions
          <span
            class="cds--visually-hidden"
          >
            Total items selected:  1. To clear selection, press Delete or Backspace.
          </span>
        </label>
        <div
          class="cds--multi-select cds--combo-box cds--multi-select--filterable cds--multi-select--selected cds--list-box"
          id="allergy-reactions-multiselect-test-allergy-1"
        >
          <div
            class="cds--list-box__field"
          >
            <div
              class="cds--tag cds--tag--filter cds--tag--high-contrast"
            >
              <span
                class="cds--tag__label"
                title="1"
              >
                1
              </span>
              <button
                aria-label="Clear all selected items"
                class="cds--tag__close-icon"
                tabindex="-1"
                title="Clear all selected items"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                  />
                </svg>
              </button>
            </div>
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="listbox"
              autocomplete="off"
              class="cds--text-input cds--text-input--empty"
              id="allergy-reactions-multiselect-test-allergy-1-input"
              placeholder="Select Reactions"
              role="combobox"
              value=""
            />
            <button
              aria-controls="allergy-reactions-multiselect-test-allergy-1__menu"
              aria-expanded="false"
              aria-label="Open"
              class="cds--list-box__menu-icon"
              id="allergy-reactions-multiselect-test-allergy-1-toggle-button"
              tabindex="-1"
              title="Open"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
            </button>
          </div>
          <ul
            aria-labelledby="allergy-reactions-multiselect-test-allergy-1-label"
            class="cds--list-box__menu"
            id="allergy-reactions-multiselect-test-allergy-1__menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
